--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+.custom-scrollbar {
+  /* Estilo general para el contenedor */
+  scrollbar-width: thin; /* Para Firefox */
+  scrollbar-color: #888 #eee; /* Para Firefox */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra de desplazamiento */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #eee; /* Color de fondo del track */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #888; /* Color del thumb (la parte que se mueve) */
+  border-radius: 10px; /* Radio de borde del thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color del thumb al pasar el mouse */
+}
